@@ -4,12 +4,18 @@
 
 @section v2_04_dev Changes with libapreq2-2.04-dev
 
+
+- C API [rendyk, joes]
+  Cookie parser was locking up on non-alphanumeric chars in cookie names.
+  Also RFC Cookie attributes are always checked for quotes during bake(2),
+  and the quotes are now stripped from incoming RFC cookies during parsing 
+  (but they are never stripped from the actual cookie value).
+
 - Perl API [joes]
   Apache::Cookie::Jar->new accepts a VALUE_CLASS argument, which effectively
   blesses all the jar's cookies into that class, which simplifies subclassing
   Apache::Cookie.   Accordingly Apache::Cookie->freeze($value) no longer accepts 
   a freeze()-able object in $value.
-
 
 - C API [Markus Wichitill, randyk, joes]
   Drop APR_DELONCLOSE from apreq_file_mktemp implementation and install
